--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
 * {
   box-sizing: border-box;
+  background-color: #023e8a;
+  color: #ade8f4;
+}
+
+a {
+  text-decoration: none;
 }
 
 li {
   list-style: none;
   margin: 10px;
+  cursor: pointer;
+}
+
+li:hover {
+  opacity: .5;
 }
 
 .flex-row {
   display: flex;
   flex-wrap: wrap;
+}
+
+section {
+  margin-left: 65px;
+}
+
+.img-container {
+  margin-right: 15px;
+}
+
+.thumbnail {
+  margin-top: 20px;
+}
+
+.img-link, .img-link2, .img-desc {
+  font-size: 25px;
+}
+
+.img-link:hover, .img-link2:hover {
+  opacity: .5;
 }
