--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,49 @@ section {
 .img-link:hover, .img-link2:hover {
   opacity: .5;
 }
+
+form {
+  width: 40%;
+}
+
+input {
+  font-size: 1rem;
+  padding: 0.25rem;
+  border: 1px solid #ade8f4;
+  outline: none;
+  border-radius: 3px;
+  transition: box-shadow 0.2s;
+}
+
+input:focus {
+  border: 1px solid #0077b6;
+  box-shadow: 0 0 .5rem rgba(0, 0, 0, .5);
+}
+
+textarea {
+  width: 600px;
+	height: 80px;
+	border: 1px solid #ade8f4;
+	padding: 5px;
+}
+
+textarea:focus {
+  border: 5px solid #0077b6;
+  box-shadow: 0 0 .5rem rgba(0, 0, 0, .5);
+}
+
+button {
+  font-size: 1rem;
+  text-decoration: none;
+  padding: 0.25rem 1rem;
+  border-radius: .5rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin: 0 1px;
+  background-color: #0077b6;
+}
+
+button:hover {
+  opacity: .5;
+}
