--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ h1 {
   font-size: 2.5em;
 }
 
+h2 {
+  font-size: 2em;
+}
+
 .flex-row {
   display: flex;
   flex-wrap: wrap;
@@ -27,23 +31,55 @@ a {
   color: #00b4d8;
 }
 
+li {
+  list-style: none;
+}
+
 /* header styles */
 header {
-  padding: 15px 0 15px 0;
+  display: grid;
+  grid-template-columns: 1fr auto minmax(500px, 3fr) 1fr;
+  padding: 10px;
+  text-align: center;
   position: sticky;
+  width: 100%;
   top: 0;
   background-color: #00b4d8;
   color: #023e8a;
 }
 
-header a {
+header h1 {
+  grid-column: 2 / 3;
+  color: #023e8a;
+}
+
+nav {
+  all: unset;
+  grid-column: 3 / 4;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+nav a {
   margin-left: 15px;
   color: #023e8a;
 }
 
+
+nav ul {
+  display: flex;
+}
+
+nav li {
+  margin-left: 1em;
+  margin-bottom: 0;
+}
+
 .nav-link {
+  margin-left: 15px;
+  color: #023e8a;
   list-style: none;
-  margin: 10px;
   cursor: pointer;
   font-size: 21px;
   font-weight: bold;
@@ -57,7 +93,17 @@ header a {
   color:#caf0f8;
 }
 
+.nav-toggle {
+  display: none;
+}
+
+.nav-toggle-label {
+  display: none;
+}
+
+/*==================*/
 /* my work styles */
+/*==================*/
 .port {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -65,7 +111,7 @@ header a {
   margin-left: 65px;
 }
 
-.port h1 {
+.port h2 {
   grid-column: 2 /3;
 }
 
@@ -104,7 +150,7 @@ header a {
   grid-template-columns: 1fr 2fr 1fr;
 }
 
-.contact-grid h1 {
+.contact-grid h2 {
   grid-column: 2 /3;
 }
 
@@ -181,7 +227,7 @@ section {
   grid-template-columns: repeat(5, 1fr);
 }
 
-section h1 {
+section h2 {
   grid-column: 2 / 3;
 }
 
@@ -204,9 +250,8 @@ section h1 {
   /* justify-items: center; */
 }
 
-.resume h1 {
+.resume h2 {
   grid-column-start: 2;
-  font-size: 2.5em
 }
 
 .dl-resume {
@@ -273,3 +318,114 @@ section h1 {
 .space {
   height: 15vh;
 }
+
+@media screen and (max-width: 840px) {
+  h2 {
+    font-size: 1.5em;
+  }
+
+  h3 {
+    font-size: 1em;
+  }
+
+  header {
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0;;
+    width: 100%;
+    margin-left: 0;
+    grid: 1 / 5;
+  }
+  
+  .title {
+    padding: 5px 0 5px 0;
+    grid-column: 2 / 3;
+  }
+
+  nav {
+    position: absolute;
+    grid-column: 1 / 6;
+    text-align: left;
+    top: 100%;
+    left: 0;
+    margin-left: 0;
+    padding: 0;
+    background: #00b4d8;
+    width: 100%;
+    transform: scale(1, 0);
+    transform-origin: top;
+    transition: transform 150ms ease-in-out;
+  }
+
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+    padding: 0;
+  }
+
+  nav li {
+    margin-bottom: 1em;
+    margin-left: 1em;
+  }
+
+  nav a {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+  }
+  
+  .nav-toggle-label {
+    margin-left: 1em;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .nav-toggle-label span,
+  .nav-toggle-label span::before,
+  .nav-toggle-label span::after {
+    display: block;
+    justify-items: right;
+    background: #023e8a;
+    height: 2px;
+    right: 5;
+    width: 2em;
+    border-radius: 2px;
+    position: relative;
+  }
+
+  .nav-toggle-label span::before,
+  .nav-toggle-label span::after {
+    content: '';
+    position: absolute;
+  }
+
+  .nav-toggle-label span::before {
+    bottom: 7px;
+  }
+
+  .nav-toggle-label span::after {
+    top: 7px;
+  }
+
+  .nav-toggle:checked ~ nav {
+    transform: scale(1, 1);
+  }
+}
+
+.about-text {
+  font-size: 1em;
+}
+
+.dl-resume {
+  font-size: 1em;
+}
+
+.front-end,
+.back-end {
+  font-size: .75em;
+}
+
+
+
+
+
