--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ h1 {
 
 h2 {
   font-size: 2em;
+  margin-top: 10px;
 }
 
 h3 {
@@ -322,7 +323,7 @@ section h2 {
   height: 15vh;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 770px) {
   /*==================*/
   /*global styles*/
   /*==================*/
@@ -391,7 +392,9 @@ section h2 {
     margin-left: 1em;
     height: 100%;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
+    margin-right: 10px;
   }
 
   .nav-toggle-label span,
@@ -426,129 +429,26 @@ section h2 {
   }
   
   /*==================*/
-  /*resume styles*/
+  /*about me styles*/
   /*==================*/
-  .dl-resume p {
-    font-size: 18px;
+  section {
+    grid-template-columns: 1fr 5fr 1fr;
   }
 
-  .resume a {
-    font-size: 18px;
-  }
-
-  .back-end {
+  section h2 {
     grid-column: 2 / 3;
   }
+  .me {
+    grid-column: 2 / 3;
+    width: 60%;
+    margin-bottom: 10px;
+  }
 
-  .resume li {
+  .about-text {
+    grid-column: 2 / 3;
     font-size: 18px;
   }
 
-  @media screen and (max-width: 840px) {
-    /*==================*/
-    /*global styles*/
-    /*==================*/
-    h1 {
-      font-size: 1.5em;
-    }
-    
-    h2 {
-      font-size: 22px;
-    }
-  
-    h3 {
-      font-size: 18px;
-      font-weight:900
-    }
-  
-    /*==================*/
-    /*header styles*/
-    /*==================*/
-    header {
-      grid-template-columns: 1fr 1fr 1fr;
-      padding: 0;;
-      width: 100%;
-      margin-left: 0;
-      grid: 1 / 5;
-    }
-    
-    .title {
-      padding: 5px 0 5px 0;
-      grid-column: 2 / 3;
-    }
-  
-    nav {
-      position: absolute;
-      grid-column: 1 / 6;
-      text-align: left;
-      top: 100%;
-      left: 0;
-      margin-left: 0;
-      padding: 0;
-      background: #00b4d8;
-      width: 100%;
-      transform: scale(1, 0);
-      transform-origin: top;
-      transition: transform 150ms ease-in-out;
-    }
-  
-    nav ul {
-      display: flex;
-      flex-direction: column;
-      margin-right: 10px;
-      padding: 0;
-    }
-  
-    nav li {
-      margin-bottom: 1em;
-      margin-left: 1em;
-    }
-  
-    nav a {
-      font-size: 1.2rem;
-      text-transform: uppercase;
-    }
-    
-    .nav-toggle-label {
-      margin-right: 1em;
-      height: 100%;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-    }
-  
-    .nav-toggle-label span,
-    .nav-toggle-label span::before,
-    .nav-toggle-label span::after {
-      display: block;
-      justify-items: right;
-      background: #023e8a;
-      height: 2px;
-      right: 5;
-      width: 2em;
-      border-radius: 2px;
-      position: relative;
-    }
-  
-    .nav-toggle-label span::before,
-    .nav-toggle-label span::after {
-      content: '';
-      position: absolute;
-    }
-  
-    .nav-toggle-label span::before {
-      bottom: 7px;
-    }
-  
-    .nav-toggle-label span::after {
-      top: 7px;
-    }
-  
-    .nav-toggle:checked ~ nav {
-      transform: scale(1, 1);
-    }
-  }
-  
   /*==================*/
   /*resume styles*/
   /*==================*/
@@ -571,6 +471,16 @@ section h2 {
   /*==================*/
   /*my work styles*/
   /*==================*/
+  .port {
+    grid-template-columns: 1fr 7fr 1fr;
+  }
 
+  .port-grid {
+    grid-column: 2 / 3;
+  }
 
+  .port-grid p,
+  .port-grid a {
+    font-size: 20px;
+  }
 }
